fix z-index tooltips (#1081)

--- a/app/public/src/pages/component/game/game-pokemon-detail.css
+++ b/app/public/src/pages/component/game/game-pokemon-detail.css
@@ -1,7 +1,3 @@
-#pokemon-detail {
-  z-index: 1060; /* 1050 comes from react modal library */
-}
-
 .__react_component_tooltip.game-pokemon-detail-tooltip {
   padding: 5px;
 }
